<resources>
    <string name="app_name">HorseLinc</string>
    <string name="image_description">Image Description</string>
    <string name="skip">SKIP</string>
    <string name="continue_">CONTINUE</string>
    <string name="linc_ing_horses_to_the_services_they_need_by_automating">
        \"Linc\"ing horses to the services they need
        by automating
    </string>
    <string name="service_requests_from_the_horse_managers">Service requests\nfrom the Horse Managers</string>
    <string name="service_provider_scheduling">Service Provider Scheduling</string>
    <string name="invoicing">Invoicing</string>
    <string name="payments">Payments</string>
    <string name="horse_managers">Horse Managers</string>
    <string name="intro_horse_managers_description">Set up horse profiles to easily manage services payments associated
        each horse.\n\nRequest services for the horses that will be sent directly to the service providers’ schedules.
        \n\nConfirm automated invoices once services are completed to process payments from the assigned horse owner’s
        profile.
    </string>
    <string name="service_providers">Service Providers</string>
    <string name="intro_service_providers_description">Set up your services and rates in your personalized profile.
        Manage scheduled service requests from your schedule screen.\n\nMark services complete to automatically create an
        invoice back to the horse managers. Receive confirmation of automated payment once horse managers confirm the
        services are completed.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="forgot_password_description">Enter your Email below and we’ll send you\ninstructions on how to reset
        your password
    </string>
    <string name="log_in_instead">LOG IN INSTEAD</string>
    <string name="email_instructions">Email Instructions</string>
    <string name="sign_up">Sign up</string>
    <string name="horse_trainers">Horse Trainers</string>
    <string name="horse_owners">Horse Owners</string>
    <string name="horse_manager">Horse Manager</string>
    <string name="service_provider">Service Provider</string>
    <string name="horse_braiders">Horse Braiders</string>
    <string name="other_services">Other Services</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="search_your_location">Search your location</string>
    <string name="or_enter_your_address_here">Or enter your address here</string>
    <string name="add_payment_information">Add payment information</string>
    <string name="create_account_terms">
        By creating an account, you agree to the Terms &amp;\nConditions and Privacy Policy of HorseLinc
    </string>
    <string name="create_account">Create Account</string>
    <string name="bullet_symbols">\u2022\u2022\u2022\u2022</string>
    <string name="add_new_card">Add New Card</string>
    <string name="payment_approvals">Payment approvals</string>
    <string name="these_horse_managers_can_approve_payments">
        These Horse Managers can approve payments to Service Providers on your behalf (up to a specified dollar value).
    </string>
    <string name="add_payment_approver">Add Payment Approver</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="barn">Barn</string>
    <string name="done">Done</string>
    <string name="payment_approver_name">Payment Approver Name</string>
    <string name="dollar_value">Dollar Value</string>
    <string name="unlimited">Unlimited</string>
    <string name="up_to">Up to</string>
    <string name="msg_sucess">Success</string>
    <string name="msg_alert_update_default_payment">Are you sure you want to change default payment?</string>
    <string name="msg_alert_delete_payment">Are you sure you want to delete this payment?</string>
    <string name="msg_alert_clear_payment_approver">Are you sure you want to delete approver?</string>
    <string name="msg_alert_delete_service_rate">Are you sure you want to delete service rate?</string>
    <string name="msg_alert_delete_horse_owner">Are you sure you want to delete this owner?</string>
    <string name="msg_alert_delete_horse">Are you sure you want to delete horse?</string>
    <string name="msg_alert_logout">Are you sure you want to log out?</string>
    <string name="msg_alert_delete_request">Are you sure you want to delete this request?</string>
    <string name="msg_alert_delete_service">Are you sure you want to delete this service?</string>
    <string name="msg_alert_delete_base_user">Are you sure you want to remove this user?</string>
    <string name="msg_alert_delete_notification">Are you sure you want to delete this notification?</string>
    <string name="msg_alert_complete_request">Are you sure to mark this job as complete?\nThis action cannot be undone. Once a job is marked complete, it will be moved into the payments tab.</string>
    <string name="msg_err_required">Required</string>
    <string name="msg_err_invalid">Invalid</string>
    <string name="msg_err_please_select_approver">Please select approver</string>
    <string name="msg_err_please_enter_amount">Please enter amount</string>
    <string name="msg_confirm_password_not_match">Confirm password does not match</string>
    <string name="msg_confirm_add_service_provider">Are you sure you want to add user who invited you as your service provider?</string>
    <string name="msg_err_network">Network error, please try again when you have a connection</string>
    <string name="msg_info_network">You have a connection now</string>
    <string name="add_new_rate">Add New Rate</string>
    <string name="add_new_service">Add New Service</string>
    <string name="service_rate">Service Rate</string>
    <string name="service_name">Service Name</string>
    <string name="save">Save</string>
    <string name="add_new_bank_account">Add New Bank Account</string>
    <string name="horses">Horses</string>
    <string name="schedule">Schedule</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="no_horses_available_at_this_time">No horses available at this time</string>
    <string name="no_horse_users_available_at_this_time">No users available at this time</string>
    <string name="new_horse_profile">New Horse Profile</string>
    <string name="create_horse_profile">Create Horse Profile</string>
    <string name="edit_horse_profile">Edit Horse Profile</string>
    <string name="horse_barn_name_required">Horse Barn Name (required)</string>
    <string name="horse_show_name_required">Horse Show Name (required)</string>
    <string name="horse_show_name">Horse Show Name</string>
    <string name="horse_gender_required">Gender (required)</string>
    <string name="horse_gender">Gender</string>
    <string name="birth_year">Birth Year</string>
    <string name="horse_profile_description">Add any necessary notes on\npersonality or temperament here.</string>
    <string name="horse_profile_description_1">Use the fields below to attach an Owner, Trainer, and/or Leaser to this
        horse profile/ If no owner is attached, the trainer will be responsible for payment.
    </string>
    <string name="horse_trainer_required">HORSE TRAINER (required)</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="horse_owner_s_optional">HORSE OWNER(S) (optional)</string>
    <string name="horse_profile_owner_error">Percentages of ownership must total 100%.\nPlease review and try again.
    </string>
    <string name="horse_leased_to_description">Use the \"Leased to\" field to attach a Horse Manager to\nthis horse
        profile in order forward payment
        \nresponsibilities until the Leaser is removed.
    </string>
    <string name="search_by_name">Search by name</string>
    <string name="leased_to">LEASED TO</string>
    <string name="registration_info_optional">REGISTRATION INFO (optional)</string>
    <string name="sire">Sire</string>
    <string name="dam">Dam</string>
    <string name="color">Color</string>
    <string name="height">Height</string>
    <string name="add_another_horse_owner">ADD ANOTHER HORSE OWNER</string>
    <string name="create_new_horse_owner">Create New Horse Owner</string>
    <string name="add_another_registration">ADD ANOTHER REGISTRATION</string>
    <string name="delete_horse_profile">Delete horse profile</string>
    <string name="ok">OK</string>
    <string name="select_birth_year">Select Birth Year</string>
    <string name="can_t_find_someone">Can’t find someone?</string>
    <string name="invite_to_horselinc">Invite to HorseLinc</string>
    <string name="search">Search</string>
    <string name="percent_symbol">%</string>
    <string name="_0_00">0.00</string>
    <string name="sharp_symbol">#</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="select">Select</string>
    <string name="show_only">Show only</string>
    <string name="owner">Owner</string>
    <string name="trainer">Trainer</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="services_scheduled">Services Scheduled</string>
    <string name="request_a_service">Request a Service</string>
    <string name="select_owner">Select Owner</string>
    <string name="select_trainer">Select Trainer</string>
    <string name="my_service_providers">My Service Providers</string>
    <string name="edit_payment_information">Edit Payment Information</string>
    <string name="contact_horselinc">Contact HorseLinc</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="switch_to_provider_profile">Switch To Provider Profile</string>
    <string name="add_service_provider">Add Service Provider</string>
    <string name="no_requests_available_at_this_time">No requests available at this time</string>
    <string name="choose_service_provider">Choose Service Provider</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="service">Service</string>
    <string name="barn_name">Barn Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="or_enter_address_here">Or enter address here</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="service_rates">Service Rates</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rates">Rates</string>
    <string name="payment_provider_drafts">Drafts</string>
    <string name="payment_provider_submitted">Submitted</string>
    <string name="payment_provider_paid">Paid</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="usef_registration">USEF Registration</string>
</resources>