<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainBackground"
        tools:context="com.horselinc.views.activities.HLCalendarActivity">

    <ImageView
            android:id="@+id/prevMonthImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_description"
            android:scaleType="center"
            android:scaleX="-1"
            app:srcCompat="@drawable/ic_arrow_right_black"
            android:tint="@color/colorTeal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/monthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/colorTeal"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/prevMonthImageView"
            app:layout_constraintEnd_toStartOf="@+id/nextMonthImageView"
            app:layout_constraintStart_toEndOf="@+id/prevMonthImageView"
            app:layout_constraintTop_toTopOf="@+id/prevMonthImageView"
            tools:text="April 2018" />

    <ImageView
            android:id="@+id/nextMonthImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/image_description"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_arrow_right_black"
            android:tint="@color/colorTeal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/weeksContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prevMonthImageView">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/sun" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/mon" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/tue" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/wed" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/thu" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/fri" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorTeal"
                android:gravity="center_horizontal"
                android:text="@string/sat" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calenderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weeksContainer">

        <com.kizitonwose.calendarview.CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cv_dayViewResource="@layout/item_calendar_day"
                app:cv_inDateStyle="allMonths"
                app:cv_orientation="horizontal"
                app:cv_outDateStyle="endOfRow"
                app:cv_scrollMode="paged"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancel"
                android:textColor="@color/colorTeal"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/okButton"
                app:layout_constraintEnd_toStartOf="@+id/okButton"
                app:layout_constraintTop_toTopOf="@+id/okButton" />

        <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ok"
                android:textColor="@color/colorTeal"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
