<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimary"
                                                   tools:context="com.horselinc.views.fragments.role.HLAddPaymentApproverFragment"
>
    <ImageView
            app:srcCompat="@drawable/ic_arrow_back_white"
            android:tint="@android:color/white"
            android:layout_width="40dp"
            android:layout_height="40dp" android:id="@+id/backImageView" android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/image_description"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:text="@string/payment_approvals"
            android:id="@+id/titleTextView1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/backImageView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="56dp" android:id="@+id/nameEditText"
            android:background="@drawable/corner4_background_456579"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:drawableEnd="@drawable/ic_search_white"
            android:textCursorDrawable="@drawable/edit_text_cursor_white"
            android:hint="@string/payment_approver_name"
            android:textColorHint="#4dffffff"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView1"
            app:layout_constraintStart_toStartOf="@+id/titleTextView1"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" tools:ignore="Autofill"
            android:inputType="textPersonName"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/nameTextView"
            android:background="@drawable/corner4_background_456579"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
            app:layout_constraintTop_toTopOf="@+id/nameEditText"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:text="@string/dollar_value"
            android:id="@+id/titleTextView2"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>
    <Switch
            android:background="@drawable/corner4_background_456579"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/unlimitedSwitch"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/unlimited"
            android:theme="@style/PaymentApproverSwitch"
            app:layout_constraintStart_toStartOf="@+id/titleTextView2"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView2" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"/>

    <me.abhinay.input.CurrencyEditText
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:inputType="numberDecimal"
            android:background="@drawable/corner4_background_456579"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:textCursorDrawable="@drawable/edit_text_cursor_white"
            android:hint="@string/up_to"
            android:textColorHint="#4dffffff"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/amountEditText"
            tools:ignore="Autofill"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/unlimitedSwitch"
            app:layout_constraintStart_toStartOf="@+id/unlimitedSwitch"
            app:layout_constraintEnd_toEndOf="@+id/unlimitedSwitch"/>

    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="45dp" android:id="@+id/addButton"
            android:background="@color/colorPink"
            android:enabled="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:lineSpacingExtra="4sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <com.jude.easyrecyclerview.EasyRecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:id="@+id/searchRecyclerView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>
